tests/fail/mac6.rs
use const_addrs::mac6;

fn main() {
    let a = mac6!("ca:fe:ca:fe:c0:ff:ee");
}
